--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -24,9 +24,31 @@
         </activity>
         
         <activity
-            android:name="com.comscience15.glassworkdeviceinfo.LogcatViewer" >
+            android:name=".LogcatViewer"
+            android:label="@string/app_name" >
+            <intent-filter> 
+                <action android:name="com.comscience15.glassworkdeviceinfo.LogcatViewer" />
+                <category android:name="android.intent.category.DEFAULT"  />              
+            </intent-filter>       
         </activity>
         
+        <activity
+            android:name=".sendEmail"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="com.comscience15.glassworkdeviceinfo.sendEmail" />
+                <category android:name="android.intent.category.DEFAULT"  />  
+            </intent-filter>
+        </activity>
+        
+        <activity
+            android:name=".EmailSend"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="com.comscience15.glassworkdeviceinfo.EmailSend" />
+                <category android:name="android.intent.category.DEFAULT"  />  
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
