--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="17" />
 
     <application
+        android:name="com.comscience15.glassworkdeviceinfo.app.AppData"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -47,6 +48,23 @@
             <intent-filter>
                 <action android:name="com.comscience15.glassworkdeviceinfo.EmailSend" />
                 <category android:name="android.intent.category.DEFAULT"  />  
+            </intent-filter>
+        </activity>
+        
+        <activity
+            android:name=".ApkListActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="com.comscience15.glassworkdeviceinfo.ApkListActivity" />
+				<category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ApkInfo"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="com.comscience15.glassworkdeviceinfo.ApkInfo" />
+				<category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
