--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.comscience15.glassworkdeviceinfo"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="25"
+    android:versionName="3.1.3" >
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+    
+    <uses-permission android:name="android.permission.READ_LOGS"></uses-permission>  
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 
     <application
         android:name="com.comscience15.glassworkdeviceinfo.app.AppData"
@@ -14,12 +17,12 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="com.comscience15.glassworkdeviceinfo.GWMain"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -41,6 +44,15 @@
                 <category android:name="android.intent.category.DEFAULT"  />  
             </intent-filter>
         </activity>
+        
+ <!--   <activity
+            android:name=".emailDeviceLogcat"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="com.comscience15.glassworkdeviceinfo.emailDeviceLogcat" />
+                <category android:name="android.intent.category.DEFAULT"  />  
+            </intent-filter>
+        </activity> -->
         
         <activity
             android:name=".EmailSend"
@@ -74,5 +86,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
